--- a/med-ezz/package.json
+++ b/med-ezz/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactfire": "^3.0.0-rc.0",
     "web-vitals": "^1.0.1"
